# genial

./: README.md  pyproject.toml  setup.py
connection_mngr/: llm_connection_mngr.py
