[tool.poetry]
name = "genial"
version = "0.1.0"
description = ""
authors = ["Roland <harry.cain72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
langchain = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
